--- a/index.html
+++ b/index.html
@@ -7,6 +7,25 @@
     <title>LGBTQS+</title>
 </head>
 <body>
-    
+    <header>
+        <div class="container">
+            <div class="flex1">
+                <a href="#index.html">
+                    <img src="images/LOGO.png" alt="Logo LGBTQS+" class="logo">
+                </a>
+                <ul>
+                    <li><a href="#" class="caixa">Início</a></li>
+                    <li><a href="#" class="caixa">Grupos</a></li>
+                    <li><a href="#" class="caixa">Chat</a></li>
+                    <li><a href="#">
+                        <img src="images/Icons/search-solid.svg" alt="Lupa de pesquisa">
+                    </a></li>
+                    <li><a href="#">
+                        <img src="images/Icons/user-solid.svg" alt="Perfil">
+                    </a></li>
+                </ul>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
