Celular quase terminado

--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://kit.fontawesome.com/525a7ba6e9.js" crossorigin="anonymous"></script>
     <title>LGBTQS+</title>
 </head>
+
 <body>
     <header>
         <div class="container">
@@ -17,15 +20,101 @@
                     <li><a href="#" class="caixa">Início</a></li>
                     <li><a href="#" class="caixa">Grupos</a></li>
                     <li><a href="#" class="caixa">Chat</a></li>
+                </ul>
+                <ul>
                     <li><a href="#">
-                        <img src="images/Icons/search-solid.svg" alt="Lupa de pesquisa">
-                    </a></li>
-                    <li><a href="#">
-                        <img src="images/Icons/user-solid.svg" alt="Perfil">
-                    </a></li>
+                            <img src="images/Icons/search-solid.svg" alt="Lupa de pesquisa">
+                        </a></li>
+                            <li><a href="#">
+                                <img src="images/Icons/user-solid.svg" alt="Perfil">
+                            </a></li>
                 </ul>
             </div>
+                    <div class="linha">
+                    </div>
         </div>
     </header>
+
+    <div class="card">
+        <div class="profile">
+            <a href=""><i class="fas fa-user"></i></a>
+        </div>
+        <img src="images/imagem-1-grupos.jpg" alt="">
+        <div class="texto">
+            <ul>
+                <h3>GAYSSZZZ</h3>
+                <li>Entre no melhor grupo de homosseuxuais do app!! ;)</li>
+            </ul>
+            <div class="caixa">
+                <p>participar!</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="card">
+            <a href=""><i class="fas fa-user"></i></a>
+
+        <img src="images/imagem-1-grupos.jpg" alt="">
+        <div class="texto">
+            <ul>
+                <h3>GAYSSZZZ</h3>
+                <li>Entre no melhor grupo de homosseuxuais do app!! ;)</li>
+            </ul>
+            <div class="caixa">
+                <p>participar!</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="card">
+        <div class="profile">
+            <a href=""><i class="fas fa-user"></i></a>
+        </div>
+        <img src="images/imagem-1-grupos.jpg" alt="">
+        <div class="texto">
+            <ul>
+                <h3>GAYSSZZZ</h3>
+                <li>Entre no melhor grupo de homosseuxuais do app!! ;)</li>
+            </ul>
+            <div class="caixa">
+                <p>participar!</p>
+            </div>
+        </div>
+    </div>
 </body>
+<footer>
+    <div class="rodape">
+        <ul>
+            <li>Ajuda</li>
+            <li>Contato</li>
+            <li>Política de Privacidade</li>
+        </ul>
+        <div class="flex2">
+            <img src="images/LOGO.png" alt="Logo LGBTQS+">
+            <div class="icons">
+                <a href=""><i class="fab fa-facebook-square"></i></a>
+                <a href=""><i class="fab fa-youtube"></i></a>
+                <a href=""><i class="fab fa-instagram-square"></i></a>
+                <a href=""><i class="fab fa-twitter-square"></i></a>
+            </div>
+        </div>
+        <div class="texto2">
+            <ul>
+                <li>Anuncie</li>
+                <li>Termos</li>
+                <li>Configurações</li>
+            </ul>
+        </div>
+    </div>
+
+</footer>
+<p class="final"> Copyright - Todos os direitos reservados </p>
+
 </html>
+
+
+
+
+
+
+
