Rodapé em todas as pags

--- a/perfil.html
+++ b/perfil.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Titillium+Web&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>LGBTQS+</title>
 </head>
@@ -45,5 +46,36 @@
             </div>
         </div>
     </main>
+    <footer>
+        <div class="rodape">
+
+            <div class="div1">
+                <a href="#">Ajuda</a>
+                <a href="#">Contato</a>
+                <a href="#">Política de Privacidade</a>
+            </div>
+
+            <div class="logoimg">
+                <img src="images/LOGO.png" alt="Logo do site LGBTQS+" class="logo">
+                <div class="socialmedia">
+                    <a href="#"><img src="images/Icons/facebook-square-brands.svg" alt="Facebook Acesso"></a>
+                    <a href="#"><img src="images/icons/instagram-square-brands.svg" alt="Instagram Acesso"></a>
+                    <a href="#"><img src="images/Icons/twitter-square-brands.svg" alt="Twiiter Acesso"></a>
+                    <a href="#"><img src="images/Icons/youtube-square-brands.svg" alt="Youtube Acesso"></a> 
+                </div>
+            </div>
+
+            <div class="div2">
+                <a href="#">Anuncie</a>
+                <a href="#">Termos</a>
+                <a href="#">Configuração</a>
+            </div>
+
+        </div>
+        <div class="rodape2">
+            <p>© Copyright - Todos os direitos reservados</p>
+        </div>
+
+    </footer>
 </body>
 </html>
