Concluido Chat Cadastro e Perfil

--- a/Cadastro.html
+++ b/Cadastro.html
@@ -17,7 +17,7 @@
                 <ul>
                     <li><a href="index.html" class="caixa">Início</a></li>
                     <li><a href="#" class="caixa">Grupos</a></li>
-                    <li><a href="#" class="caixa">Chat</a></li>
+                    <li><a href="chat.html" class="caixa">Chat</a></li>
                     <li>
                         <a href="#">
                             <img src="images/Icons/search-solid.svg" alt="Lupa de pesquisa">
